--- a/index.html
+++ b/index.html
@@ -16,11 +16,44 @@
 
                 <div class="nav-list">
                      <ul>
-                        <li class="nav-item"><a href="#"></a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
+                        <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
                     </ul>
                 </div>
+
+                <div class="login-button">
+                    <button>
+                        <a href="#"><h1>Entrar</h1></a>
+                    </button>
+                </div>
+
+                <div class="mobile-menu-icon">
+                    <button onclick="menuShow()"><img class="icon" src="./img/menu_white_36dp.svg"> </button>
+                </div>
             </nav>
+
+            <div class="mobile-menu">
+                <ul>
+                    <li class="nav-item"><a href="#" class="nav-link">Início</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Projetos</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">Sobre</a></li>
+                </ul>
+
+
+                <div class="login-button">
+                    <button>
+                        <a href="#"><h1>Entrar</h1></a>
+                    </button>
+                </div>
+
+
+            </div>
     </header>
+
+    <script src="./script.js"></script>
+
+
 
     
     
